--- a/_posts/16-10-01-Books.md
+++ b/_posts/16-10-01-Books.md
@@ -3,7 +3,8 @@ isChild: true
 anchor:  books
 ---
 
-## Books {#books_title}
+## ספרים {#books_title}
+
 
 There are a lot of books around for PHP but some are sadly now quite old and no longer contain accurate information.
 There are even books published for "PHP 6" which does not exist, and will not now ever exist. The next major version of
