--- a/_posts/16-09-01-Videos.md
+++ b/_posts/16-09-01-Videos.md
@@ -4,18 +4,18 @@ anchor:  videos
 title:   Video Tutorials
 ---
 
-## Video Tutorials {#videos}
+## מדריכים מצולמים {#videos}
 
-### Youtube Channels 
-* [PHP Academy](https://www.youtube.com/user/phpacademy)
+### ערוצי Youtube 
+* [האקדמיה ל-PHP](https://www.youtube.com/user/phpacademy)
 * [The New Boston](https://www.youtube.com/user/thenewboston)
 * [Sherif Ramadan](https://www.youtube.com/user/businessgeek)
 * [Level Up Tuts](https://www.youtube.com/user/LevelUpTuts)
 
-### Paid Videos
+### סרטונים בתשלום
 
-* [Standards and Best practices](http://teamtreehouse.com/library/standards-and-best-practices)
-* [PHP Training on Pluralsight](http://www.pluralsight.com/search/?searchTerm=php)
-* [PHP Training on Lynda.com](http://www.lynda.com/search?q=php)
-* [PHP Training on Tutsplus](http://code.tutsplus.com/categories/php/courses)
+* [סטנדרטים וקוד נכון](http://teamtreehouse.com/library/standards-and-best-practices)
+* [PHP מתאמנים ב-Pluralsight](http://www.pluralsight.com/search/?searchTerm=php)
+* [PHP מתאמנים ב-Lynda.com](http://www.lynda.com/search?q=php)
+* [PHP מתאמנים ב-Tutsplus](http://code.tutsplus.com/categories/php/courses)
 * [Laracasts](https://laracasts.com/)
