--- a/_posts/16-08-01-Sites.md
+++ b/_posts/16-08-01-Sites.md
@@ -4,19 +4,19 @@ anchor:  other_resources
 title:   Other Useful Resources
 ---
 
-## Other Useful Resources {#other_resources_title}
+## משאבים שימושיים אחרים {#other_resources_title}
 
-### Cheatsheets
+### קיצורי דרך - Cheatsheets
 
-* [PHP Cheatsheets](http://phpcheatsheets.com/) - for variable comparisons, arithmetics and variable testing in various
-PHP versions
+* [PHP Cheatsheets](http://phpcheatsheets.com/) - להשוואת משתנים, חשבון ובחינת משתנים בגרסאות PHP שונות.
+
 * [PHP Security Cheatsheet](https://www.owasp.org/index.php/PHP_Security_Cheat_Sheet)
 
-### More best practices
+### עוד טיפים לקידוד נכון
 
-* [PHP Best Practices](https://phpbestpractices.org/)
-* [Best practices for Modern PHP Development](https://www.airpair.com/php/posts/best-practices-for-modern-php-development)
+* [טיפים לפיתוח PHP נכון](https://phpbestpractices.org/)
+* [טיפים לפיתוח נכון של מערכות PHP מודרניות](https://www.airpair.com/php/posts/best-practices-for-modern-php-development)
 
-### PHP universe
+### יקום ה-PHP
 
 * [PHP Developer blog](http://blog.phpdeveloper.org/)
