--- a/_posts/16-10-01-Books.md
+++ b/_posts/16-10-01-Books.md
@@ -5,30 +5,28 @@ anchor:  books
 
 ## ספרים {#books_title}
 
+ספרים רבים נכתבו בנושא ה-PHPת למרבה העצב, רבים מהם כבר מיושנים ואינם מכילים מידע עדכני ונכון.
+ישנם אפילו ספרים שפורסמו בנושא "PHP 6"ת גרסה שכלל אינה קיימת וגם לא תהיה בעתיד. הגרסה הבאה הראשית של שפת ה-PHP
+תיקרא "PHP 7" בגלל ספרים אלה.
 
-There are a lot of books around for PHP but some are sadly now quite old and no longer contain accurate information.
-There are even books published for "PHP 6" which does not exist, and will not now ever exist. The next major version of
-PHP will be named "PHP 7" because of those books.
+מטרתו של פרק זה הוא להיות מסמך עדכני המכיל המלצות על ספרים בנושא פיתוח PHP באופן כללי. במידה ותרצו שספרכם 
+יתווסף לרשימה, שלחו לנו בקשת פרסום ואנו נבדוק את מידת הרלוונטיות שלה למדור זה.
 
-This section aims to be a living document for recommended books on PHP development in general. If you would like your
-book to be added, send a PR and it will be reviewed for relevancy.
+### ספרות חינמית
 
-### Free Books
+* [PHP The Right Way](https://leanpub.com/phptherightway/) - אתר זה זמין כספר און ליין חינם אין כסף.
 
-* [PHP The Right Way](https://leanpub.com/phptherightway/) - This website is available as a book completely for free.
+### ספרות לרכישה
 
-### Paid Books
-
-* [Build APIs You Won't Hate](https://leanpub.com/build-apis-you-wont-hate) - Everyone and their dog wants an API,
-so you should probably learn how to build them.
-* [Building Secure PHP Apps](https://leanpub.com/buildingsecurephpapps) - Learn the security basics that a senior
-developer usually acquires over years of experience, all condensed down into one quick and easy handbook
-* [Modernizing Legacy Applications In PHP](https://leanpub.com/mlaphp) - Get your code under control in a series of
-small, specific steps
-* [Securing PHP: Core Concepts](https://leanpub.com/securingphp-coreconcepts) - A guide to some of the most common
-security terms and provides some examples of them in every day PHP
-* [Scaling PHP]( https://leanpub.com/scalingphp) - Stop playing sysadmin and get back to coding
-* [Signaling PHP]( https://leanpub.com/signalingphp) - PCNLT signals are a great help when writing PHP scripts that
-run from the command line.
-* [The Grumpy Programmer's Guide To Building Testable PHP Applications](https://leanpub.com/grumpy-testing) - Learning
-to write testable code doesn't have to suck
+* [Build APIs You Won't Hate](https://leanpub.com/build-apis-you-wont-hate) - כל אחד ואחת (וגם הכלב שלהם) רוצים
+API, כנראה עדיף שתלמד איך בונים אותם.
+* [Building Secure PHP Apps](https://leanpub.com/buildingsecurephpapps) - למדו את הבסיס לאבטחת מידע שמפתחים בכירים
+בד"כ רוכשים לאחר שנים רבות של ניסיון. הכל דחוס בתוך מדריך מהיר ופשוט.
+* [Modernizing Legacy Applications In PHP](https://leanpub.com/mlaphp) - קחו שליטה על הקוד שלכם בסדרה של צעדים 
+ קטנים ומדודים.
+* [Securing PHP: Core Concepts](https://leanpub.com/securingphp-coreconcepts) - מדריך לרוב מונחי האבטחה הידועים תוך 
+ מתן דוגמאות קריאות בשפת ה-PHP.
+* [Scaling PHP]( https://leanpub.com/scalingphp) - תפסיקו לשחק אותה מנהלי מערכת וחזרו לקודד.
+* [Signaling PHP]( https://leanpub.com/signalingphp) - PCNLT איתותים מספקים סיוע רב כאשר כותבים סקריפטים להרצה משורת הפקודה.
+* [The Grumpy Programmer's Guide To Building Testable PHP Applications](https://leanpub.com/grumpy-testing) - זה לא 
+צריך להיות קשה ללמוד איך לכתוב קוד הניתן לבחינה
